# pointercrate

./: .env  .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  Secrets.toml  Shuttle.toml  build_documentation.rs  darkmode.css  diesel.toml  grcov.yml  jsconfig.json  robots.txt  rustfmt.toml  sqlx-data.json  sqlx_prepare_all.sh
pointercrate-core/: Cargo.toml  build.rs
pointercrate-core-api/: Cargo.toml  sqlx-data.json
pointercrate-core-api/src/: error.rs  etag.rs  lib.rs  localization.rs  maintenance.rs  normalize_uri.rs  pagination.rs  preferences.rs  query.rs  response.rs  theme.rs
pointercrate-core-macros/: Cargo.toml
pointercrate-core-macros/src/: lib.rs
pointercrate-core/src/: audit.rs  config.rs  error.rs  etag.rs  lib.rs  localization.rs  pagination.rs  permission.rs  pool.rs  ratelimits.rs  theme.rs  util.rs
pointercrate-core/src/view/: error.rs  footer.rs  mod.rs  navigation.rs
pointercrate-demonlist/: Cargo.toml  sqlx-data.json
pointercrate-demonlist-api/: Cargo.toml  sqlx-data.json
pointercrate-demonlist-api/src/: claims.rs  config.rs  geolocate.rs  lib.rs  list.rs  pages.rs  ratelimits.rs
pointercrate-demonlist-api/src/endpoints/: demon.rs  misc.rs  mod.rs  nationality.rs  player.rs  record.rs  submitter.rs
pointercrate-demonlist-api/tests/: claim.rs  demon.rs  player.rs  record.rs  setup.rs
pointercrate-demonlist-pages/: Cargo.toml  flag-sources.txt  sqlx-data.json
pointercrate-demonlist-pages/src/: demon_page.rs  lib.rs  overview.rs  submit_record.rs
pointercrate-demonlist-pages/src/account/: demons.rs  list_integration.rs  mod.rs  players.rs  profile.rs  records.rs  submitters.rs
pointercrate-demonlist-pages/src/components/: mod.rs  submitter.rs  team.rs  time_machine.rs
pointercrate-demonlist-pages/src/statsviewer/: individual.rs  mod.rs  national.rs
pointercrate-demonlist-pages/static/css/: demonlist.css  statsviewer.css
pointercrate-demonlist-pages/static/ftl/en/: demon.ftl  record.ftl  statsviewer.ftl
pointercrate-demonlist-pages/static/ftl/en-us/: demon.ftl  error.ftl  list.ftl  overview.ftl  player.ftl  record.ftl  statsviewer.ftl  submitter.ftl
pointercrate-demonlist-pages/static/ftl/ru-ru/: demon.ftl  error.ftl  list.ftl  overview.ftl  player.ftl  record.ftl  statsviewer.ftl  submitter.ftl
pointercrate-demonlist-pages/static/js/: demonlist.js
pointercrate-demonlist-pages/static/js/account/: demon.js  integration.js  player.js  records.js  submitter.js
pointercrate-demonlist-pages/static/js/modules/: demonlist.js  statsviewer.js
pointercrate-demonlist-pages/static/js/statsviewer/: individual.js  nation.js
pointercrate-demonlist/sql/: all_demons.sql  all_demons_at.sql  all_rated_demons.sql  demon_by_id.sql  demon_by_name.sql  demon_by_position.sql  paginate_claims.sql  paginate_demons_by_id.sql  paginate_demons_by_position.sql  paginate_player_ranking.sql  paginate_players_by_id.sql  paginate_rated_player_ranking.sql  paginate_records.sql  prepare_player_merge.sql  record_by_id.sql
pointercrate-demonlist/src/: config.rs  error.rs  lib.rs  list.rs  video.rs
pointercrate-demonlist/src/creator/: delete.rs  get.rs  mod.rs  post.rs
pointercrate-demonlist/src/demon/: audit.rs  delete.rs  get.rs  mod.rs  paginate.rs  patch.rs  post.rs
pointercrate-demonlist/src/nationality/: get.rs  mod.rs  paginate.rs
pointercrate-demonlist/src/player/: get.rs  mod.rs  paginate.rs  patch.rs
pointercrate-demonlist/src/player/claim/: delete.rs  get.rs  mod.rs  paginate.rs  patch.rs  put.rs
pointercrate-demonlist/src/record/: audit.rs  delete.rs  get.rs  mod.rs  paginate.rs  patch.rs  post.rs
pointercrate-demonlist/src/record/note/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
pointercrate-demonlist/src/submitter/: get.rs  mod.rs  paginate.rs  patch.rs  post.rs
pointercrate-example/: .env.sample  Cargo.toml
pointercrate-example/sample/: .env.sample
pointercrate-example/sample/migrations/: 20180918150231_initial.up.sql  20181229171817_demon_view.up.sql  20190312131253_nationality.down.sql  20210224123230_new_formula_once_again.up.sql  20210726174613_nation_ranking.up.sql  20210825182933_new_claim_system.down.sql  20220412171531_public_notes.down.sql  20220805215800_fix_youtube_channel_audit.up.sql  20240804194818_raw_footage_fixup.down.sql  20240907133101_resync_database.down.sql
pointercrate-example/sample/migrations/_new/: 20190222212203_list_functions.down.sql  20191004164504_demon_ids.up.sql  20200725072253_fix_smallint.up.sql  20210327024242_timemachine.down.sql  20210725221543_player_claims.down.sql  20220324104659_lock_submissions.up.sql  20240518154803_no_extended_progress_points.up.sql  20240725201300_better_raw_footage.down.sql  20240907133101_resync_database.up.sql  (+1 more)
pointercrate-example/src/: main.rs
pointercrate-integrate/: Cargo.toml  sqlx-data.json
pointercrate-integrate/src/: gd.rs  lib.rs
pointercrate-test/: Cargo.toml
pointercrate-test/src/: demonlist.rs  lib.rs  user.rs
pointercrate-test/tests/: main.rs
pointercrate-test/tests/demonlist/: claim.rs  demon.rs  mod.rs  nationality.rs  player.rs  record.rs
pointercrate-test/tests/it/: mod.rs
pointercrate-test/tests/user/: login.rs  mod.rs  register.rs
pointercrate-user/: Cargo.toml  sqlx-data.json
pointercrate-user-api/: Cargo.toml
pointercrate-user-api/src/: auth.rs  lib.rs  oauth.rs  pages.rs  ratelimits.rs
pointercrate-user-api/src/endpoints/: auth.rs  mod.rs  user.rs
pointercrate-user-api/tests/: login.rs  register.rs  setup.rs
pointercrate-user-pages/: Cargo.toml  sqlx-data.json
pointercrate-user-pages/src/: lib.rs  login.rs  register.rs
pointercrate-user-pages/src/account/: mod.rs  profile.rs  settings.rs  users.rs
pointercrate-user-pages/static/css/: account.css  login.css
pointercrate-user-pages/static/js/: gsi-theme.js  login.js  register.js
pointercrate-user/sql/: paginate_users.sql
pointercrate-user/src/: auth.rs  config.rs  delete.rs  error.rs  get.rs  lib.rs  paginate.rs  patch.rs  video.rs
pointercrate-user/src/auth/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
sql/: ranking.sql  (+12 more)
(+530 files in other folders)
