[workspace]
members = [
    "pointercrate-core",
    "pointercrate-core-api",
    "pointercrate-core-pages",
    "pointercrate-demonlist",
    "pointercrate-demonlist-api",
    "pointercrate-demonlist-pages",
    "pointercrate-user",
    "pointercrate-user-api",
    "pointercrate-user-pages",
    "pointercrate-integrate",

    # Crate only containing integration tests
    "pointercrate-test",

    # Crate containing an example setup for a custom list
    "pointercrate-example"
]