[package]
name = "pointercrate-core-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
rocket = {version = "0.5.1", features = ["json"]}
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
serde_json = "1.0.128"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
log = "0.4.22"
serde_urlencoded = "0.7.0"
maud = "0.26.0"
