[package]
name = "pointercrate-core-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
rocket = { workspace = true }
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
serde_json = "1.0.145"
sqlx = { workspace = true }
log = "0.4.28"
serde_urlencoded = "0.7.0"
maud = "0.27.0"
unic-langid = "0.9.5"
tokio = "1.47.1"