[package]
name = "pointercrate-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
derive_more = { version = "2.0.1", features = ["display"] }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate"] }
log = "0.4.27"
chrono = {version = "0.4.41", features = ["serde"]}
getrandom = "0.3.3"
