[package]
name = "pointercrate-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
derive_more = { version = "2.0.1", features = ["display"] }
sqlx = { workspace = true }
fluent = "0.17.0"
tokio = "1.48.0"
log = "0.4.28"
chrono = {version = "0.4.42", features = ["serde"]}
getrandom = "0.3.4"
unic-langid = "0.9.5"
thiserror = "2.0.17"
fluent-syntax = "0.12.0"
