[package]
name = "pointercrate-demonlist-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { workspace = true }
pointercrate-demonlist = {path = "../pointercrate-demonlist"}
pointercrate-demonlist-pages = {path = "../pointercrate-demonlist-pages"}
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-api = {path = "../pointercrate-core-api"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
pointercrate-core-macros = {path = "../pointercrate-core-macros"}
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-user-api = {path = "../pointercrate-user-api"}
pointercrate-integrate = {path = "../pointercrate-integrate"}
sqlx = { workspace = true }
serde_json = "1.0.145"
log = "0.4.28"
nonzero_ext = "0.3.0"
reqwest = {version = "0.12.*", features = ["json"]}
chrono = "0.4.42"
serde = "1.0.228"
governor = "0.10.1"
rand = "0.9.2"
maud = "0.27.0"

[features]
geolocation = ["pointercrate-demonlist-pages/geolocation"]