[package]
name = "pointercrate-demonlist-pages"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-user-pages = {path = "../pointercrate-user-pages"}
pointercrate-demonlist = {path = "../pointercrate-demonlist"}
pointercrate-integrate = {path = "../pointercrate-integrate"}
maud = "0.22.1"
chrono = "0.4.19"
url = "2.2.0"
async-trait = "0.1.42"
