[package]
name = "pointercrate-demonlist-pages"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-user-pages = {path = "../pointercrate-user-pages"}
pointercrate-demonlist = {path = "../pointercrate-demonlist"}
pointercrate-integrate = {path = "../pointercrate-integrate"}
maud = "0.27.0"
chrono = "0.4.41"
url = "2.5.4"
async-trait = "0.1.88"
log = "0.4.27"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate" ] }

[features]
geolocation = []