[package]
name = "pointercrate-demonlist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
derive_more = "0.99.11"
pointercrate-core = {path = "../pointercrate-core"}
log = "0.4.11"
futures = "0.3.8"
chrono = {version = "0.4.10", features = ["serde"]}
url = "2.2.0"
