[package]
name = "pointercrate-demonlist"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
derive_more = "0.99.18"
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-user = {path = "../pointercrate-user"}
log = "0.4.22"
futures = "0.3.8"
chrono = {version = "0.4.38", features = ["serde"]}
url = "2.5.2"

[dev-dependencies]
dotenv = "0.15.0"
tokio = "1.40.0"
