[package]
name = "pointercrate-demonlist"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
derive_more = { version = "2.0.1", features = ["display"] }
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-user = {path = "../pointercrate-user"}
log = "0.4.27"
futures = "0.3.31"
chrono = {version = "0.4.41", features = ["serde"]}
url = "2.5.4"
