[package]
name = "pointercrate-example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
maud = "0.26.0"
pointercrate-core = { version = "0.1.0", path = "../pointercrate-core" }
pointercrate-core-api = { version = "0.1.0", path = "../pointercrate-core-api" }
pointercrate-core-pages = { version = "0.1.0", path = "../pointercrate-core-pages" }
pointercrate-demonlist = { version = "0.1.0", path = "../pointercrate-demonlist" }
pointercrate-demonlist-api = { version = "0.1.0", path = "../pointercrate-demonlist-api" }
pointercrate-demonlist-pages = { version = "0.1.0", path = "../pointercrate-demonlist-pages" }
pointercrate-user = { version = "0.1.0", path = "../pointercrate-user" }
pointercrate-user-api = { version = "0.1.0", path = "../pointercrate-user-api" }
pointercrate-user-pages = { version = "0.1.0", path = "../pointercrate-user-pages", features = ["legacy_accounts"] }
rocket = "0.5.1"
