[package]
name = "pointercrate-example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
maud = "0.27.0"
pointercrate-core = { version = "0.1.0", path = "../pointercrate-core" }
pointercrate-core-api = { version = "0.1.0", path = "../pointercrate-core-api" }
pointercrate-core-pages = { version = "0.1.0", path = "../pointercrate-core-pages" }
pointercrate-core-macros = { version = "0.1.0", path = "../pointercrate-core-macros" }
pointercrate-demonlist = { version = "0.1.0", path = "../pointercrate-demonlist" }
pointercrate-demonlist-api = { version = "0.1.0", path = "../pointercrate-demonlist-api", features = ["geolocation"] }
pointercrate-demonlist-pages = { version = "0.1.0", path = "../pointercrate-demonlist-pages", features = ["geolocation"] }
pointercrate-user = { version = "0.1.0", path = "../pointercrate-user" }
pointercrate-user-api = { version = "0.1.0", path = "../pointercrate-user-api", features = ["legacy_accounts"] }
pointercrate-user-pages = { version = "0.1.0", path = "../pointercrate-user-pages", features = ["legacy_accounts"] }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master" }
unic-langid = { version = "0.9.5", features = ["macros"] }
reqwest = "0.12.23"
serde = "1.0.226"

[features]
oauth2 = ["pointercrate-user-api/oauth2", "pointercrate-user-pages/oauth2"]
