[package]
name = "pointercrate-integrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
bincode = "1.3.1"
reqwest = "0.12.*"
futures = "0.3.31"
log = "0.4.28"
chrono = "0.4.42"
tokio = {version = "1.48.0", features = ["rt"]}
pointercrate-demonlist = { path = "../pointercrate-demonlist" }
pointercrate-core = { path = "../pointercrate-core" }
dash-rs = { git = "https://github.com/stadust/dash-rs" }
governor = "0.10.1"
nonzero_ext = "0.3.0"

