[package]
name = "pointercrate-integrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
bincode = "1.3.1"
reqwest = "0.13.*"
futures = "0.3.32"
log = "0.4.29"
chrono = "0.4.44"
tokio = {version = "1.50.0", features = ["rt"]}
pointercrate-demonlist = { path = "../pointercrate-demonlist" }
pointercrate-core = { path = "../pointercrate-core" }
dash-rs = { git = "https://github.com/stadust/dash-rs" }
governor = "0.10.4"
nonzero_ext = "0.3.0"

