[package]
name = "pointercrate-user-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate" ] }
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-user-pages = {path = "../pointercrate-user-pages"}
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-api = {path = "../pointercrate-core-api"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
log = "0.4.22"
base64 = "0.22.1"
nonzero_ext = "0.3.0"
serde_urlencoded = "0.7.0"
governor = "0.6.0"
