[package]
name = "pointercrate-user-pages"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.26.0"
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
async-trait = "0.1.82"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "migrate" ] }

[features]
legacy_accounts = ["pointercrate-user/legacy_accounts"]