[package]
name = "pointercrate-user-pages"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.27.0"
pointercrate-core = {path = "../pointercrate-core"}
pointercrate-core-api = {path = "../pointercrate-core-api"}
pointercrate-user = {path = "../pointercrate-user"}
pointercrate-core-pages = {path = "../pointercrate-core-pages"}
async-trait = "0.1.89"
sqlx = { workspace = true }

[features]
legacy_accounts = ["pointercrate-user/legacy_accounts"]
oauth2 = ["pointercrate-user/oauth2"]