[package]
name = "pointercrate-user"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-core = {path = "../pointercrate-core"}
serde = "1.0.210"
derive_more = "0.99.18"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
jsonwebtoken = "9.3.0"
log = "0.4.22"
futures = "0.3.31"
base64 = "0.22.1"
lazy_static = "1.5.0"
bcrypt = "0.15.1"
url = "2.5.2"
serde_json = "1.0.128"

[features]
legacy_accounts = []