[package]
name = "pointercrate-user"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-core = {path = "../pointercrate-core"}
serde = "1.0.219"
derive_more = { version = "2.0.1", features = ["display"] }
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono" ] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
futures = "0.3.31"
bcrypt = "0.17.0"
url = "2.5.4"
chrono = { version = "0.4.41", optional = true }

[features]
legacy_accounts = []
oauth2 = ["chrono"]
