[package]
name = "pointercrate-user"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pointercrate-core = {path = "../pointercrate-core"}
serde = "1.0.228"
derive_more = { version = "2.0.1", features = ["display"] }
sqlx = { workspace = true }
jsonwebtoken = "10.0.0"
log = "0.4.28"
futures = "0.3.31"
bcrypt = "0.17.1"
url = "2.5.7"
chrono = { version = "0.4.42", optional = true }

[features]
legacy_accounts = []
oauth2 = ["chrono"]
